Updates from FindBugs report